feat: i forget what all i refactored
